fixed before tab spacing so filename isn't cut off

--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -47,7 +47,7 @@
       top: -1px;
       left: -16px;
       height: @tab-height;
-      width: 30px;
+      width: 16px;
       border-top-left-radius: @tab-radius;
       border-left: @tab-border;
       box-shadow: inset 1px -1px 1px rgba(0,0,0, .05);
